--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@
 /.vs/UNUM/FileContentIndex/7a1d6bc9-1e4b-4905-8bbd-b2bd8c8f479d.vsidx
 /.vs/UNUM/FileContentIndex/4ada8d60-ac77-47d0-b1c9-096fc73e3d7a.vsidx
 /.vs/UNUM/FileContentIndex/001befef-655e-4340-a7af-f3b7c5868ecb.vsidx
+/UNUMSelfPwdReset/obj/Release/net6.0/UNUMSelfPwdReset.GeneratedMSBuildEditorConfig.editorconfig
+/UNUMSelfPwdReset/obj/Debug/net6.0/UNUMSelfPwdReset.pdb
+/UNUMSelfPwdReset/obj/Debug/net6.0/UNUMSelfPwdReset.GeneratedMSBuildEditorConfig.editorconfig
+/UNUMSelfPwdReset/obj/Debug/net6.0/UNUMSelfPwdReset.dll
+/UNUMSelfPwdReset/obj/Debug/net6.0/refint/UNUMSelfPwdReset.dll
+/UNUMSelfPwdReset/obj/Debug/net6.0/ref/UNUMSelfPwdReset.dll
+/UNUMSelfPwdReset/obj/Debug/net6.0/project.razor.vs.json
+/UNUMSelfPwdReset/bin/Debug/net6.0/UNUMSelfPwdReset.pdb
+/UNUMSelfPwdReset/bin/Debug/net6.0/UNUMSelfPwdReset.dll
+/.vs/UNUM/FileContentIndex/f9a2ed28-f933-45ad-a879-485b975ce6f7.vsidx
+/.vs/UNUM/FileContentIndex/5ac2c807-aa3a-4965-9d72-537b5f7a5993.vsidx
+/.vs/UNUM/FileContentIndex/17704632-efb4-443b-9aa1-501b3f0cc7bd.vsidx
+/.vs/UNUM/DesignTimeBuild/.dtbcache.v2
+/.vs/UNUM/FileContentIndex/93352edc-f616-46c2-9220-0901b9d41f23.vsidx
